Modify OpenAPI spec to add additional details to the import collection bundle endpoint. Improve import collection bundle stub.
