# app/models/collection-model.js
@@ -3,9 +3,13 @@
 const mongoose = require('mongoose');
 const AttackObject = require('./attack-object-model');
 const xMitreCollectionDefinitions = require('./subschemas/x-mitre-collection');
+const workspaceDefinitions = require('./subschemas/workspace');
 
 // Create the definition
 const collectionDefinition = {
+    workspace: {
+        ...workspaceDefinitions.collection
+    },
     stix: {
         ...xMitreCollectionDefinitions.xMitreCollection
     }
